--- a/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
+++ b/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,19 @@
         android:backgroundTint="@color/teal_700"
         android:text="Ver consumo de agua"
         android:textColor="?attr/colorOnSurface" />
+
+
+    <Button
+        android:id="@+id/btnValvula"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:drawablePadding="8dp"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:drawableStart="@drawable/baseline_power_settings_new_24"
+        android:text="Desactivar válvula"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:textColor="@android:color/white" />
+
 </LinearLayout>
