--- a/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
+++ b/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,16 @@
         android:text="Ver consumo de agua"
         android:textColor="?attr/colorOnSurface" />
 
+    <Button
+        android:id="@+id/btnMqttTest"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_700"
+        android:textColor="?attr/colorOnSurface"
+        android:text="Probar MQTT"
+        android:layout_marginTop="16dp"
+        />
+
 
     <Button
         android:id="@+id/btnValvula"
