--- a/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
+++ b/Android/AguaSmart/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,15 @@
         android:layout_marginTop="16dp"
         />
 
+    <Button
+        android:id="@+id/btnFijarUbicacion"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Fijar Ubicación ESP32"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/teal_700"
+        android:textColor="?attr/colorOnSurface"
+        />
 
     <Button
         android:id="@+id/btnValvula"
